Round 2 of visual bug fixes for UHF for website (#2911)
* Fix blog calendar overlap in mobile

* Fixed blog page, resource page, and get-started page visual bugs

* Added change file

* Renamed classes to get rid of "override" language

--- a/apps/fabric-website/src/pages/BlogPage/BlogItem.scss
+++ b/apps/fabric-website/src/pages/BlogPage/BlogItem.scss
@@ -53,6 +53,10 @@ $BlogItem-dateColumnWidth: 120px;
     max-width: 50em;
     width: 100%;
     padding-top: 60px;
+
+    h2 {
+      margin: $uhf-h2-margin;
+    }
   }
 
   .BlogItem-title {
